# MATES

./: .readthedocs.yaml  README.md  Ref2csv.py  build_reference.py  common_errors.md  hg38.chromAlias.txt  model_training.sh  process_bam_files.sh  pyproject.toml  requirements.txt  selecting_distributions.py  setup.py  tmp.txt  training_preparation.sh
MATES/: MATES_main.py  MATES_model.py  TE_locus_quantifier.py  TE_quantifier.py  TE_quantifier_Intronic.py  TE_quantifier_LongRead.py  __init__.py  bam_processor.py  calculate_MU.py  combining_unique_TE.py  count_coverage_10X.py  count_coverage_Smartseq.py  data_processor.py  generateTraining.py  make_prediction.py  quant_unique_TE.py  setup.py  split_u_m.sh  train_model.py
MATES.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
MATES/MATES.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
MATES/figures/: Model-figure-01.eps
MATES/scripts/: AutoEncoder.py  MLP.py  Ref2csv.py  TE_locus_quantifier.py  __init__.py  calculate_MU.py  count_Uread_10X.py  count_Uread_Smartseq.py  count_coverage_10X.py  count_coverage_Smartseq.py  count_coverage_batch.py  generatePrediction.py  generateTraining.py  helper_function.py  make_prediction.py  make_prediction_locus.py  prediction.py  split_bc_long.sh  (+8 more)
Sample/: README.md  sample_pipeline.ipynb  sorted_final_merged.bam.bai  test_bam_path.txt  test_cb.tsv  test_cb_path.txt
docs/: MATES_model.rsd  TE_quantifier.rsd  TE_quantifier_Intronic.rsd  TE_quantifier_LongRead.rsd  api.md  bam_processor.rsd  conf.py  data_processor.rsd  index.rst  requirements.txt  usage.rsd
example/: README.md  realignUnmapped.sh  sample_pipeline.ipynb  sample_pipeline_intronic.ipynb  simple_mode_sample_pipeline.ipynb  test_bam_path.txt  test_cb_path.txt
helper_sh/: split_bc_m.sh
scripts/: MLP.py  count_coverage_batch.py  generatePrediction.py  quant_unique_TE.py  split_bam_by_bc.py  training_model.py
tutorial/: Tut_LongRead.md  pipeline_tutorial.ipynb  reference_downloading.md
(+11 files in other folders)
